Crafted and styled the home login screen, added some components.

--- a/client/flip/public/index.html
+++ b/client/flip/public/index.html
@@ -10,10 +10,12 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Kanit:wght@200&family=Lobster&family=Rajdhani&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&family=Reenie+Beanie&family=Sansita+Swashed:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&family=Reenie+Beanie&family=Sansita+Swashed:wght@300&family=Vidaloka&display=swap" rel="stylesheet">
     <title>Flip</title>
   </head>
   <body>
