fixed adding a deck to user, added the favorite deck route.

--- a/client/flip/public/index.html
+++ b/client/flip/public/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Flip, a social flashcard app"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&family=Reenie+Beanie&family=Sansita+Swashed:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&family=Reenie+Beanie&family=Sansita+Swashed:wght@300&family=Vidaloka&display=swap" rel="stylesheet">
-    <title>Flip</title>
-  </head>
-  <body>
-    <div id="flip"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Flip, a social flashcard app" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&family=Reenie+Beanie&family=Sansita+Swashed:wght@300&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&family=Reenie+Beanie&family=Sansita+Swashed:wght@300&family=Vidaloka&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/80b7719dc5.js" crossorigin="anonymous"></script>
+  <title>Flip</title>
+</head>
+
+<body>
+  <div id="flip"></div>
+</body>
+
 </html>
